# mpy_picopcmcia

./: .gitmodules  build.sh
boards/PICOPCMCIA/: Makefile  manifest.py  memmap_mp_rp2350.ld  mpconfigboard.cmake  mpconfigboard.h  picopcmcia_board.h  pins.csv
src/: bioslayer.py  boot.py  cga.py  int13hhandler.py  main.py  main_pc110bootfloppy.py  picopcmcia.py
src/cmodules/picopcmcia_low/: attr_rom.c  common_rom.c  ioiface.c  micropython.cmake  picopcmcia_low.c  picopcmcia_proto.h
src/pcscripts/: cga.py
src/roms/: included_roms.c  micropython.cmake
src/roms/8088/: CMakeLists.txt  init.S  main.c
